--- a/frontend/src/assets/css/connectuser.css
+++ b/frontend/src/assets/css/connectuser.css
@@ -83,6 +83,13 @@
     text-align: center;
 }
 
+#csPstyle {
+    font-size: 14px;
+    font-weight: lighter;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+}
+
 .csMenu_Child11>p:last-child {
     font-size: 14px;
     font-weight: lighter;
@@ -167,7 +174,7 @@
 
 .csMenu_Child12 .css-a88p61-MuiInputBase-root-MuiInput-root {
     color: #ffffff;
-    width: 100px;
+    width: 120px;
     margin-top: 8%;
 }
 
@@ -266,6 +273,10 @@
     right: 30px;
 }
 
+#openCSmenu {
+    height: 65%;
+}
+
 
 @media screen and (max-width:1280px) {
     .c_menu {
@@ -328,5 +339,85 @@
 
     .csMenu_Child2 {
         margin: 10% 8%;
+    }
+}
+
+@media screen and (min-width:2560px) {
+    .c_menu {
+        top: 7%;
+        box-shadow: -7px 8px 30px rgb(60 60 60 / 52%);
+        height: 65%;
+        min-height: 65%;
+    }
+
+    .cs_menu {
+        max-width: 485px;
+        min-width: 485px;
+        width: 485px;
+        top: 18.5%;
+        left: 376.5px;
+    }
+
+    .cancelIcon_CMenu>img {
+        width: 25px;
+        height: 25px;
+    }
+
+    #openCSmenu {
+        height: 51.5%;
+    }
+
+    .csMenuDiv1>img {
+        width: 55px;
+    }
+
+    .csMenuDiv2>p {
+        font-size: 22px;
+        line-height: 27px;
+    }
+
+    .csMenuDiv2>p:last-child {
+        font-size: 20px;
+    }
+
+    .csMenu_Child11>p {
+        font-size: 32px;
+    }
+
+    #csPstyle {
+        font-size: 22px;
+    }
+
+    .csMenu_Child11>p:last-child {
+        font-size: 22px;
+    }
+
+    .cancelIcon_CMenu {
+        margin-top: 35px;
+        margin-right: 35px;
+    }
+
+    .csMenu_Child12 .css-1x51dt5-MuiInputBase-input-MuiInput-input {
+        font-size: 35px;
+    }
+
+    .csMenu_Child12 .css-a88p61-MuiInputBase-root-MuiInput-root {
+        width: 147px;
+    }
+
+    .CMenu_search .css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root {
+        font-size: 22px;
+    }
+
+    .csMenu_Child12 {
+        font-size: 24px;
+        line-height: 30px;
+        padding: 0 14%;
+    }
+
+    .csMenu_Child2 button {
+        font-size: 29px;
+        padding: 3.5% 0%;
+        line-height: 22px;
     }
 }
