--- a/frontend/src/assets/css/signin.css
+++ b/frontend/src/assets/css/signin.css
@@ -125,9 +125,8 @@
     display: block;
     text-align: center;
     color: white;
-    position: absolute;
-    left: 6px;
-    top: 0;
+    position: relative;
+    transform: translate(-0.3px, -3.6px);
 }
 
 .signin_checkout>input:active {
@@ -179,10 +178,6 @@
 
     .signin_checkout {
         width: 41%;
-    }
-
-    .signin_checkout>input:checked::before {
-        top: -1.1px;
     }
 }
 
