--- a/frontend/src/assets/css/dashboarddatatables.css
+++ b/frontend/src/assets/css/dashboarddatatables.css
@@ -84,7 +84,6 @@ div.dataTables_wrapper div.dataTables_paginate {
 }
 
 #datatable {
-    overflow-y: auto;
     width: 100%;
     height: 88%;
 }
@@ -148,6 +147,31 @@ div.dataTables_wrapper div.dataTables_paginate {
     color: #3E6578;
 }
 
+
+.dataTables_filter input:focus {
+    color: #212529;
+    background-color: #fff;
+    border-color: #d7d7d7;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba(62, 101, 120, 0.479);
+}
+
+.dataTables_filter {
+    transform: translate(-20px, -73px);
+}
+
+.dataTables_filter input {
+    border: 1px solid #d7d7d7 !important;
+    border-radius: 4px !important;
+    width: 331px;
+    padding: 5px 10px !important;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0.25px;
+    text-align: left;
+}
+
 #datatable th {
     font-size: 14px;
     font-weight: 600;
@@ -199,4 +223,15 @@ div.dataTables_wrapper div.dataTables_paginate {
     #percentage {
         font-size: 26px;
     }
+
+    .dataTables_filter {
+        transform: translate(-243px, -121px);
+    }
+
+    .dataTables_filter input {
+        width: 443px;
+        padding: 10.5px 20px !important;
+        font-size: 22px;
+    }
+
 }
