--- a/frontend/src/components/chat/chat.css
+++ b/frontend/src/components/chat/chat.css
@@ -284,6 +284,11 @@
 .msgChild1-3 {
     height: 9%;
     border-top: 2px solid #dfdfdf;
+}
+
+.msgChild1-3 form {
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
 }
@@ -370,6 +375,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.msgChild3-3 button {
+    background: transparent;
+    border: 0;
 }
 
 .send {
